--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
-**1. package.json**
 ```json
 {
   "name": "mini-wms-server",
   "version": "1.0.0",
-  "description": "Mini Warehouse Management System Server",
+  "description": "Mini WMS Server for FIFO/FEFO",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
   }
 }
 ```
