--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
-
 {
   "name": "mini-wms-server",
   "version": "1.0.0",
-  "description": "Mini WMS Server for FIFO/FEFO",
+  "description": "Mini Warehouse Management System",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": "18.x"
-  },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5"
   }
 }
